--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -153,7 +153,7 @@
     <ClInclude Include="ReturnValue.h" />
     <ClInclude Include="SettingsFrame.h" />
     <ClInclude Include="Settings_SRV.h" />
-    <ClInclude Include="UHMTUFrame.h" />
+    <ClInclude Include="OptimizeMtuFrame.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
@@ -162,9 +162,9 @@
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="SettingsFrame.cpp" />
     <ClCompile Include="Settings_SRV.cpp" />
-    <ClCompile Include="UHMTUFrame.cpp" />
-    <ClCompile Include="UHMTUFrame_SRV.cpp" />
-    <ClCompile Include="UHMTUFrame_Test.cpp" />
+    <ClCompile Include="OptimizeMtuFrame.cpp" />
+    <ClCompile Include="OptimizeMtuFrame_SRV.cpp" />
+    <ClCompile Include="OptimizeMtuFrame_Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ping437.bat">
