Move string function

--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="SettingsFrame.h" />
     <ClInclude Include="Settings_SRV.h" />
     <ClInclude Include="OptimizeMtuFrame.h" />
+    <ClInclude Include="String_SRV.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
@@ -165,6 +166,7 @@
     <ClCompile Include="OptimizeMtuFrame.cpp" />
     <ClCompile Include="OptimizeMtuFrame_SRV.cpp" />
     <ClCompile Include="OptimizeMtuFrame_Test.cpp" />
+    <ClCompile Include="String_SRV.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ping437.bat">
