--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="ApplyMtuFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="String_SRV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -63,6 +66,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ApplyMtuFrame_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="String_SRV.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
