Move common layout code to Layout_SRV

--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="ApplyMtuFrame.h" />
+    <ClInclude Include="Layout_SRV.h" />
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="ReturnValue.h" />
     <ClInclude Include="SettingsFrame.h" />
@@ -164,6 +165,7 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="ApplyMtuFrame.cpp" />
     <ClCompile Include="ApplyMtuFrame_SRV.cpp" />
+    <ClCompile Include="Layout_SRV.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="SettingsFrame.cpp" />
     <ClCompile Include="Settings_SRV.cpp" />
