--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="Layout_SRV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HelpFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -75,6 +78,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Layout_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HelpFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
