Map between language in config and wxLanguage
Prevent language value change on different version of wxwidgets

--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -153,6 +153,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="ApplyMtuFrame.h" />
+    <ClInclude Include="Language_SRV.h" />
     <ClInclude Include="Layout_SRV.h" />
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="HelpFrame.h" />
@@ -166,6 +167,7 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="ApplyMtuFrame.cpp" />
     <ClCompile Include="ApplyMtuFrame_SRV.cpp" />
+    <ClCompile Include="Language_SRV.cpp" />
     <ClCompile Include="Layout_SRV.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="HelpFrame.cpp" />
