Implement ApplyMtu API

--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -97,5 +97,8 @@
     <None Include="GenerateTranslatePot.bat">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="netsh437.bat">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
