--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="String_SRV.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="netsh437.bat" />
     <None Include="ping437.bat">
       <DeploymentContent>false</DeploymentContent>
     </None>
