--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -100,5 +100,8 @@
     <None Include="netsh437.bat">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="ping437_start.bat">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
