--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="TapDevice_SRV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Style_SRV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -105,6 +108,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TapDevice_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Style_SRV.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
