--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,6 @@
 *.pot
 
 # tinc-game runtime files
-tinc-game/ping437_result.txt
-tinc-game/netsh437_result.txt
+/tinc-game/ping437_result.txt
+/tinc-game/netsh437_result.txt
+/tinc-game/bin
