--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -133,5 +133,8 @@
     <None Include="netsh437_start.bat">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="installTap.bat">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
