--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="WindowsAPI_SRV.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="getTapHwid.bat" />
     <None Include="installTap.bat" />
     <None Include="netsh437.bat" />
     <None Include="netsh437_start.bat" />
@@ -197,6 +198,7 @@
     </None>
     <None Include="GenerateTranslatePot.bat" />
     <None Include="ping437_start.bat" />
+    <None Include="uninstallTap.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
