--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -136,5 +136,11 @@
     <None Include="installTap.bat">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="getTapHwid.bat">
+      <Filter>Source Files</Filter>
+    </None>
+    <None Include="uninstallTap.bat">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
