--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClInclude Include="Networks_SRV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tincTextCtrl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -123,6 +126,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MainFrame_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="tincTextCtrl.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
