--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="Resource_SRV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EditNetworkFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Resource_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="EditNetworkFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
