--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="EditNetworkFrame.h" />
     <ClInclude Include="Language_SRV.h" />
     <ClInclude Include="Layout_SRV.h" />
+    <ClInclude Include="Lock_SRV.h" />
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="HelpFrame.h" />
     <ClInclude Include="ManageTapFrame.h" />
@@ -177,6 +178,7 @@
     <ClCompile Include="EditNetworkFrame.cpp" />
     <ClCompile Include="Language_SRV.cpp" />
     <ClCompile Include="Layout_SRV.cpp" />
+    <ClCompile Include="Lock_SRV.cpp" />
     <ClCompile Include="MainFrame.cpp" />
     <ClCompile Include="HelpFrame.cpp" />
     <ClCompile Include="MainFrame_SRV.cpp" />
