Join network button

--- a/tinc-game/tinc-game.vcxproj
+++ b/tinc-game/tinc-game.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="ApplyMtuFrame.h" />
     <ClInclude Include="EditNetworkFrame.h" />
+    <ClInclude Include="JoinNetworkFrame.h" />
     <ClInclude Include="Language_SRV.h" />
     <ClInclude Include="Layout_SRV.h" />
     <ClInclude Include="Lock_SRV.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="ApplyMtuFrame.cpp" />
     <ClCompile Include="ApplyMtuFrame_SRV.cpp" />
     <ClCompile Include="EditNetworkFrame.cpp" />
+    <ClCompile Include="JoinNetworkFrame.cpp" />
     <ClCompile Include="Language_SRV.cpp" />
     <ClCompile Include="Layout_SRV.cpp" />
     <ClCompile Include="Lock_SRV.cpp" />
