--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Lock_SRV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JoinNetworkFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -147,6 +150,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Lock_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="JoinNetworkFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
