--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="JoinNetworkFrame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RenameNetworkFrame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -162,6 +165,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MainFrameInit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RenameNetworkFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
