--- a/tinc-game/tinc-game.vcxproj.filters
+++ b/tinc-game/tinc-game.vcxproj.filters
@@ -196,5 +196,6 @@
     <None Include="uninstallTap.bat">
       <Filter>Source Files</Filter>
     </None>
+    <None Include="KnownBug.md" />
   </ItemGroup>
 </Project>
