--- a/.gitignore
+++ b/.gitignore
@@ -32,17 +32,17 @@
 *.app
 
 # Visual Studio
-/tinc-game/.vs
-/tinc-game/Debug
-/tinc-game/x64
-/tinc-game/Release
+/client/tinc-game/.vs
+/client/tinc-game/Debug
+/client/tinc-game/x64
+/client/tinc-game/Release
 
 # wxWidgets translate middle file
 *.mo
 *.pot
 
 # tinc-game runtime files
-/tinc-game/ping437_result.txt
-/tinc-game/netsh437_result.txt
-/tinc-game/bin
-/tinc-game/networks
+/client/tinc-game/ping437_result.txt
+/client/tinc-game/netsh437_result.txt
+/client/tinc-game/bin
+/client/tinc-game/networks
