--- a/client/tinc-game/tinc-game.vcxproj
+++ b/client/tinc-game/tinc-game.vcxproj
@@ -59,26 +59,26 @@
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="wxwdigets.props" />
-    <Import Project="boost.props" />
+    <Import Project="..\props\wxwdigets.props" />
+    <Import Project="..\props\boost.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="wxwdigets.props" />
-    <Import Project="boost.props" />
-    <Import Project="static_Release.props" />
-    <Import Project="RunAsAdmin.props" />
+    <Import Project="..\props\wxwdigets.props" />
+    <Import Project="..\props\boost.props" />
+    <Import Project="..\props\static_Release.props" />
+    <Import Project="..\props\RunAsAdmin.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="wxwdigets_x64.props" />
-    <Import Project="boost_x64.props" />
+    <Import Project="..\props\wxwdigets_x64.props" />
+    <Import Project="..\props\boost_x64.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    <Import Project="wxwdigets_x64.props" />
-    <Import Project="boost_x64.props" />
-    <Import Project="RunAsAdmin.props" />
+    <Import Project="..\props\wxwdigets_x64.props" />
+    <Import Project="..\props\boost_x64.props" />
+    <Import Project="..\props\RunAsAdmin.props" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
