Move subsystem settings to wxwidgets props

--- a/client/props/wxwdigets_x64.props
+++ b/client/props/wxwdigets_x64.props
@@ -11,6 +11,7 @@
     </ClCompile>
     <Link>
       <AdditionalLibraryDirectories>$(WXWIN)\lib\vc_x64_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
