Add background task

--- a/client/updater/updater.vcxproj.filters
+++ b/client/updater/updater.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="MainFrame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainFrame_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
