--- a/client/resource/resource.vcxproj
+++ b/client/resource/resource.vcxproj
@@ -158,12 +158,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Layout_SRV.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource_SRV.h" />
     <ClInclude Include="ReturnValue.h" />
     <ClInclude Include="String_SRV.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Layout_SRV.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
