--- a/client/resource/resource.vcxproj.filters
+++ b/client/resource/resource.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="ReturnValue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Layout_SRV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="resource.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="String_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Layout_SRV.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
