--- a/client/resource/resource.vcxproj.filters
+++ b/client/resource/resource.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Layout_SRV.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Lock_SRV.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="resource.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Layout_SRV.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Lock_SRV.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
